--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,10 @@
   ],
   "parser": "babel-eslint",
   "parserOptions": {
-    "sourceType": "script"
+    "sourceType": "script",
+    "ecmaFeatures": {
+      "modules": true,
+    }
   },
   "plugins": [
     "flowtype"
